css changes in comments

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,20 @@
 
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
+
+#avtarPic
+{
+    width: 50px !Important;
+    height: 50px !Important;
+    margin-top: 0pc !Important;
+}
+
+#profilepic
+{
+    width: 48% !important;
+    height: 45% !Important;
+}
+
 #loginid__BV_toggle_
 {
   background-color: transparent !Important;
