CSS, translations and js in user settings

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,12 @@
 }
 
 @media only screen and (min-width: 768px) {
+
+.clasecentro
+{
+margin-left:auto;
+margin-right:auto;
+}
   #imgmenu
 {
   height: 40px;
