--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 #profilepic
 {
     width: 48% !important;
-    height: 45% !Important;
+    /* height: 45% !Important; */
 }
 
 #loginid__BV_toggle_
@@ -313,6 +313,9 @@ background-color: #ffffff !important;
 .btn-group
 {
   display: block;
+}
+.theme--light.v-application{
+  background: #ffffff00 !important;
 }
 </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
