5 start rating is done

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <link href="https://unpkg.com/bootstrap-vue@2.0.0-rc.11/dist/bootstrap-vue.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3.13/dist/vuetify.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.3.13/dist/vuetify.min.js"></script>
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
@@ -316,6 +317,10 @@ background-color: #ffffff !important;
 }
 .theme--light.v-application{
   background: #ffffff00 !important;
+}
+.theme--light.v-icon {
+    color: #fb8c00 !important;
+    caret-color: #fb8c00 !important;
 }
 </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
