--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.3.13/dist/vuetify.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.3.13/dist/vuetify.min.js"></script>
+    <script src="https://unpkg.com/vue-select@latest"></script>
+    <link rel="stylesheet" href="https://unpkg.com/vue-select@latest/dist/vue-select.css">
 <style>
 
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
@@ -321,6 +323,12 @@ background-color: #ffffff !important;
 .theme--light.v-icon {
     color: #fb8c00 !important;
     caret-color: #fb8c00 !important;
+}
+.IZ-select .IZ-select__menu.IZ-select__menu--at-bottom{
+  z-index: 9999;
+}
+.IZ-select .IZ-select__input-wrap .IZ-select__input{
+  height: 39px;
 }
 </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
