chnages is small

--- a/public/index.html
+++ b/public/index.html
@@ -330,6 +330,9 @@ background-color: #ffffff !important;
 .IZ-select .IZ-select__input-wrap .IZ-select__input{
   height: 39px;
 }
+#modal-1{
+  top: 29px;
+}
 </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
