--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,43 @@
 
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
+.IZ-select .IZ-select__input-wrap .IZ-select__input {
+    height: 100% !important;
+    border-radius: 5px !important;
+}
+
+.IZ-select .IZ-select__input input {
+    height: calc(1.5em + .75rem) !important;
+}
+
+.btn-primary {
+    background-color: #3567cc !important;
+    border-color: #3567cc !important;
+}
+
+.card .btn:disabled 
+{
+opacity:1 !important;
+}
+
+.fa.fa-language
+{
+  color: rgb(0, 123, 255);
+    z-index: 9999;
+    font-size: 35px;
+    background-color: rgb(245, 245, 245);
+    padding: 7px;
+    border-radius: 25px;
+    opacity: 100%;
+    border-color: blue;
+    border: 1px solid #007bff59!important;
+    height: 37.1px;
+}
+
+.card-columns .card
+{
+  border-radius: 20px !important;
+}
 
 #avtarPic
 {
@@ -306,7 +343,7 @@ background-color: #ffffff !important;
 }
 
 .bg-info {
-    background-color: #007bff!important;
+    background-color: #214999!important
 }
 .colorblanco span
 {
