--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     height: calc(1.5em + .75rem) !important;
 }
 
-.btn-primary {
+.btn-primary2 {
     background-color: #3567cc !important;
     border-color: #3567cc !important;
 }
