--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
+
+.card-img-top {
+    border-top-left-radius: 20px !important;
+    border-top-right-radius: 20px !important;
+}
+
 .IZ-select .IZ-select__input-wrap .IZ-select__input {
     height: 100% !important;
     border-radius: 5px !important;
